# ALXR

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  buildforcyy
.github/workflows/: prepare-alxr-release.yml  rust.yml
alvr/client/android/app/: build.gradle
alvr/client/android/app/src/main/cpp/: fec.cpp  fec.h  latency_collector.cpp  latency_collector.h
alvr/dashboard/js/app/: customSettings.js
alvr/dashboard/js/app/nls/bg/: settings.js
alvr/dashboard/js/app/nls/fr/: settings.js
alvr/dashboard/js/app/nls/it/: settings.js
alvr/dashboard/js/app/nls/ja/: settings.js
alvr/dashboard/js/app/nls/ko/: settings.js
alvr/dashboard/js/app/nls/ru/: settings.js
alvr/dashboard/js/app/nls/zh/: settings.js
alvr/dashboard/js/app/resources/: PicoNeo3.json
alvr/filesystem/: Cargo.toml
alvr/filesystem/src/: lib.rs
alvr/openxr-client/: Cargo.toml  build.rs
alvr/openxr-client/alxr-android-client/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-neo/: Cargo.toml
alvr/openxr-client/alxr-android-client/quest/: Cargo.toml
alvr/openxr-client/alxr-android-client/src/: lib.rs  permissions.rs
alvr/openxr-client/alxr-client/: Cargo.toml
alvr/openxr-client/alxr-client/src/: main.rs
alvr/openxr-client/alxr-client/uwp/: Cargo.toml  build_app_bundle.bat  build_app_package.bat  cargo_build_uwp.bat
alvr/openxr-client/alxr-client/uwp/.build/: main.rs
alvr/openxr-client/alxr-client/uwp/.cargo/: config.toml
alvr/openxr-client/alxr-common/: Cargo.toml
alvr/openxr-client/alxr-common/src/: audio.rs  connection.rs  lib.rs
alvr/openxr-client/alxr-engine-sys/: Cargo.toml  build.rs
alvr/openxr-client/alxr-engine-sys/android/: build.gradle  settings.gradle
alvr/openxr-client/alxr-engine-sys/android/app/: build.gradle
alvr/openxr-client/alxr-engine-sys/android/gradle/wrapper/: gradle-wrapper.properties
alvr/openxr-client/alxr-engine-sys/src/: lib.rs
alvr/openxr-client/android/app/: build.gradle
alvr/openxr-client/android/app/src/main/: AndroidManifest.xml
alvr/openxr-client/android/gradle/wrapper/: gradle-wrapper.properties
alvr/openxr-client/common/: Cargo.toml  build.rs
alvr/openxr-client/common/android/app/src/main/res/values/: themes.xml
alvr/openxr-client/common/src/: connection.rs  lib.rs
alvr/openxr-client/examples/: connection.rs  connection_utils.rs  openxr_client.rs
alvr/openxr-client/oxr-android-client/: Cargo.toml
alvr/openxr-client/oxr-android-client/src/: lib.rs
alvr/openxr-client/oxr-client/: Cargo.toml
alvr/openxr-client/oxr-client/src/: main.rs
alvr/openxr-client/src/: connection.rs.old  connection_utils.rs.old  lib.rs.old  main.rs.old
alvr/server/cpp/alvr_server/: OvrController.cpp
alvr/server/src/: connection.rs
alvr/sockets/src/stream_socket/: tcp.rs
alvr/xtask/: Cargo.toml
alvr/xtask/src/: dependencies.rs  main.rs  version.rs
(+3 files in other folders)
