[package]
name = "oxr_common"
version = "0.1.0"
authors = ["korejan <64199710+korejan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
alvr_common = { path = "../../common" }
#alvr_audio = { path = "../audio" }
alvr_session = { path = "../../session" }
alvr_sockets = { path = "../../sockets" }
settings-schema = { path = "../../settings-schema", features = ["rename_camel_case"] }
# Basic utilities
lazy_static = "1"
parking_lot = "0.11"
# Serialization
serde = "1"
serde_json = "1"
bincode = "1"
# Async and networking
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Miscellaneous
semver = "1"
local_ipaddress = "0.1"
structopt = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"
target-lexicon = "0.12"
