[package]
name = "alxr-client"
version = "0.1.0"
authors = ["korejan <64199710+korejan@users.noreply.github.com>"]
edition = "2018"
description = "An OpenXR based ALVR client for non-android platorms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alxr_common = { path = "../common" }
